src/test/deca/context/invalid/class_new_boolean.deca
//  Description : 
// 
//      Test incorrect qui utilise un new boolean
// 
//  Résultats :
// 
//      N/A 
// 
//  Historique : 
// 
//      Créé le 13/06 par gl03

class A {

}

{
    A oA = new true();
}